# desk-pilot

./: .gitignore  LICENSE  README.md  agent.py  computer.py  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
tests/: conftest.py  test_agent_loop.py  test_extract_json.py  test_grid_cells.py  test_html_mode_e2e.py  test_message_conversion.py  test_providers.py  test_trace_dir.py  test_window_bounds.py
